--- a/ICCV/egbib.bib
+++ b/ICCV/egbib.bib
@@ -3,15 +3,13 @@ year={2001},
 author = {Lhuillier, M. and Quan, L. and Shum, H. and Tsui, H.T.},
 title = {Relief Mosaics by Joint View Triangulation},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 @article{Lior,
 year = {2005},
 author = {Rokach, Lior and Oded Maimon},
 title = "{Clustering methods}",
-booktitle = {Data mining and knowledge discovery handbook},
-publisher = {Springer},
+journal = {Data mining and knowledge discovery handbook},
 pages= {321--352}
 }
 
@@ -20,15 +18,13 @@ year={2011},
 author = {Junhong Gao and Seon Joo Kim and Brown, M.S.},
 title = {Constructing image panoramas using dual-homography warping},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 @inproceedings{Bay,
 year={2006},
 author = {Herbert Bay and Tinne Tuytelaars and Luc Van Gool},
 title = "{SURF: Speeded Up Robust Features}",
-booktitle ={ECCV},
-publisher = {Springer}
+booktitle = {ECCV}
 }
 
 @article{Fischler1981,
@@ -42,8 +38,7 @@ publisher = {Springer}
  year = {1981},
  issn = {0001-0782},
  pages = {381--395},
- numpages = {15},
- publisher = {ACM}, 
+ numpages = {15}, 
 } 
 
 @inproceedings{Acha,
@@ -51,7 +46,6 @@ year={2005},
 author = {Rav-Acha, A. and Pritch, Y. and Lischinski, D. and Peleg, S.},
 title = {Dynamosaics: video mosaics with non-chronological time},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 @inproceedings{Eden,
@@ -59,7 +53,6 @@ year={2006},
 author = {Eden, A. and Uyttendaele, M. and Szeliski, R.},
 title = "{Seamless Image Stitching of Scenes with Large Motions and Exposure Differences}",
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 @inproceedings{Peleg,
@@ -67,7 +60,6 @@ year={1999},
 author = {Peleg, S. and  Ben-Ezra, M.},
 title = {Stereo panorama with a single camera},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 @inproceedings{Capel,
@@ -75,7 +67,6 @@ year={1998},
 author = {Capel, D. and Zisserman, A.},
 title = {Automated mosaicing with super-resolution zoom},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 @inproceedings{Szeliski1997,
@@ -100,7 +91,6 @@ year={2003},
 author = {Brown, M. and Lowe, D.G.},
 title = {Recognising panoramas},
 booktitle ={ICCV},
-publisher = {IEEE}
 }
 
 @inproceedings{Brown05,
@@ -108,7 +98,6 @@ year={2005},
 author = {Brown, M. and Szeliski, R. and Winder, S.},
 title = {Multi-image matching using multi-scale oriented patches},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
 
@@ -117,7 +106,6 @@ year={2002},
 author = {Aya Aner and John R. Kender},
 title = {Video Summaries through Mosaic-Based Shot and Scene Clustering},
 booktitle ={ECCV},
-publisher = {Springer}
 }
 
 @inproceedings{Lee,
@@ -125,15 +113,13 @@ year={2012},
 author = {Y. Lee and J. Ghosh and K. Grauman},
 title = {Discovering important people and objects for egocentric video summarization},
 booktitle ={CVPR},
-publisher = {IEEE}
 }
 
-@inproceedings{Lee,
+@inproceedings{Foote,
 year={2000},
 author = {Foote, J. and Kimber, D.},
 title = {FlyCam: practical panoramic video and automatic camera control},
 booktitle ={ICME},
-publisher = {IEEE}
 }
 
 
@@ -157,7 +143,6 @@ pages={59-73},
  year = {2006},
  pages = {853--861},
  numpages = {9},
- publisher = {ACM}
 } 
 
 @article{Milgram1975,
@@ -182,15 +167,18 @@ pages = {1175--1180}
 
 @MISC{ICE,
 author = "{Microsoft Image Composite Editor}",
+title = {Last visited {A}pr 21, 2015},
 howpublished={\url{http://research.microsoft.com/en-us/um/redmond/groups/ivm/ICE/}}
 }
 
 @MISC{autostitch,
 author = "{Autostich}",
+title = {Last visited {A}pr 21, 2015},
 howpublished={\url{http://www.cs.bath.ac.uk/brown/autostitch/autostitch.html}}
 }
 
 @MISC{photoshop,
 author = "{Adobe Photoshop CS6}",
+title = {Last visited {A}pr 21, 2015},
 howpublished={\url{http://www.adobe.com/products/photoshop}}
 }
