Final Final version

--- a/ICCV/egbib.bib
+++ b/ICCV/egbib.bib
@@ -5,6 +5,14 @@ title = {Relief Mosaics by Joint View Triangulation},
 booktitle ={CVPR},
 }
 
+@book{Kocay,
+title = {Graphs, Algorithms, and Optimization},
+author = {William Kocay and Donald L. Kreher},
+year = {2004},
+series = {Discrete Mathematics and Its Applications},
+publisher = {Chapman and Hall}
+}
+
 @article{Lior,
 year = {2005},
 author = {Rokach, Lior and Oded Maimon},
@@ -150,7 +158,7 @@ author= {Milgram, D.L.},
 title = {Computer Methods for Creating Photomosaics},
 journal = {IEEE Transactions on Computers},
 year = {1975},
-volumme = {C-24},
+volume = {C-24},
 number = {11},
 pages = {1113--1119}
 } 
@@ -160,25 +168,25 @@ author= {Milgram, D.L.},
 title = {Adaptive techniques for photomosaicking},
 journal = {IEEE Transactions on Computers},
 year = {1977},
-volumme = {26},
+volume = {26},
 number = {11},
 pages = {1175--1180}
 }
 
 @MISC{ICE,
 author = "{Microsoft Image Composite Editor}",
-title = {Last visited {A}pr 21, 2015},
+title = {Last visited {A}pril 21, 2015},
 howpublished={\url{http://research.microsoft.com/en-us/um/redmond/groups/ivm/ICE/}}
 }
 
 @MISC{autostitch,
 author = "{Autostich}",
-title = {Last visited {A}pr 21, 2015},
+title = {Last visited {A}pril 21, 2015},
 howpublished={\url{http://www.cs.bath.ac.uk/brown/autostitch/autostitch.html}}
 }
 
 @MISC{photoshop,
 author = "{Adobe Photoshop CS6}",
-title = {Last visited {A}pr 21, 2015},
+title = {Last visited {A}pril 21, 2015},
 howpublished={\url{http://www.adobe.com/products/photoshop}}
 }
