--- a/ICCV/experiments_results.tex
+++ b/ICCV/experiments_results.tex
@@ -50,14 +50,14 @@ results are shown in Figure~\ref{fig:sac3}(d).
 \includegraphics[width=0.87\linewidth]{figures/ValidationResult}
 \caption{ (a) Uniformly sampled images from an outdoor video
   expedition.  (b) Output of the state of the art photo stitchers
-  (left:Autostitch, right:Adobe Photoshop PS6) on uniformly time
+  (left:Autostitch, right:Adobe Photoshop CS6) on uniformly time
   sampled images.  As time sampled images do not guarantee coverage of
   the scene, the panorama is broken. The top portions do not belong at
-  the right place (see (d) (c) Salient image selection from the set of
-  approximately 9000 images using positional information. (d) When
+  the right place (see (d)) (c) Salient image selection from the set of
+  approximately 3000 images using positional information. (d) When
   salient images are given to Autostich (left) and Photoshop (middle),
   we can create a panoramic mosaic (since there are no vacant
-  spaces). We also show the results from our stitching algorithm
+  spaces). We also show the result from our stitching algorithm
   (bottom right).}
 \label{fig:sac3}
 \end{figure*}
@@ -87,7 +87,7 @@ A sample of the selected images are seen in Figure~\ref{fig:teaser}.
   quadcopter video using our saliency algorithm. (c) Output of
   Autostitch on the selected images. The mosaic is not reasonable
   presumably because of the confusion in features. (d) Output of Adobe
-  Photoshop PS6 on the selected images. The vacant space posed a
+  Photoshop CS6 on the selected images. The vacant space posed a
   problem to the feature matching algorithm, so instead of a mosaic,
   individual pieces were output as mini-panoramas (e) Our output on
   the selected images. We are able to join two posters (separated by
@@ -100,7 +100,7 @@ Autostitch was unable to produce any reasonable output as seen in
 Figure~\ref{fig:teaser}.  The scene, captured from a distance is also
 shown.  One can see a better orthographic view of the posters.
 
-\subsection{Outdoor Imagery with Vacant Space}
+\subsection{Outdoor Imagery with Vacant Spaces}
 Our next set of experiments were conducted in an outdoor
 environment. The input stream had about 12000 images. The selection
 algorithm pruned the video into $N=30$ images. A sample of the
@@ -123,7 +123,7 @@ state of the art stitchers with the output of our algorithm.
 %   quadcopter video using our saliency algorithm. (c) Output of
 %   Autostitch on the selected images. The mosaic is not reasonable
 %   presumably because of the confusion in features. (d) Output of Adobe
-%   Photoshop PS6 on the selected images. The vacant space posed a
+%   Photoshop CS6 on the selected images. The vacant space posed a
 %   problem to the feature matching algorithm, so instead of a mosaic,
 %   individual pieces were output as mini-panoramas (e) Our output on
 %   the selected images. We are able to join two posters (separated by
